--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
         </a>
         <div class="nav-links">
           <a href="./location-search.html">지역별 검색</a>
-          <a href="#테마별">테마별 보기</a>
-          <a href="#후기">후기 모음</a>
+          <a href="./theme-page.html">테마별 보기</a>
+          <a href="./kidszoom_reviews.html">후기 모음</a>
           <a href="#로그인" class="login-btn">로그인/회원가입</a>
         </div>
       </nav>
